<resources>
    <string name="app_name">MascotasApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--TEXTOS DE INICIO DE SESION-->
    <string name="LoginTXT">Bienvenido</string>
    <!--DATOS PARA EL INGRESO-->
    <string name="Email">Nombre de usuario:</string>
    <string name="Password">Contraseña:</string>
    <!--BOTON INGRESO USUARIO-->
    <string name="Acceder">Acceder</string>
    <!--BOTON REGISTRAR USUARIO-->
    <string name="Registrar">Registrate</string>
    <!--BOTON RECUPERAR CONTRASEÑA-->
    <string name="BtnResetPass">Recuperar contraseña</string>


    <!--RECUPERAR PASS-->
    <string name="EmailResetTXT">Restaurar contraseña</string>
    <string name="RecuperarEmail">Nombre de usuario:</string>
    <string name="BtnAccederResetPass">Enviar</string>
    <string name="TxtNotaPass">Si el correo electronico esta registrado en la base de datos podras restablecer tu contraseña.</string>

    <!--REGISTRAR USUARIO-->
    <string name="RegistroTXT">Registrate para continuar</string>
    <string name="BtnCrearUser">Enviar</string>
    <string name="NombreUser">Nombre:</string>
    <string name="ApellidoUser">Apellido:</string>
    <string name="EmailUser">Email:</string>
    <string name="PassUser">Contraseña:</string>
    <string name="PassRUser">Confirmar contraseña:</string>

    <!--TEXTOS HEADER NAV-->
    <string name="NombreCabezeraA">----</string>
    <string name="EmailCabezeraA">----</string>

    <!--TEXTOS MENU LATERAL ADMIN-->
    <string name="menu_inicio">Inicio</string>
    <string name="menu_mi_cuenta">Mi cuenta</string>
    <string name="menu_perfiles">Perfiles</string>
    <string name="menu_listar_admin">Usuarios</string>
    <string name="menu_productos_admin">Productos</string>
    <string name="menu_razas_admin">Razas</string>
    <string name="menu_servicios_admin">Servicios</string>
    <!--TEXTOS MENU LATERAL ADMIN-->
    <string name="Salir_admin">Cerrar sesión</string>


    <!--TEXTOS MENU LATERAL CLIENTE-->
    <string name="menu_inicio_c">Inicio</string>
    <string name="menu_mi_cuenta_c">Mi cuenta</string>
    <string name="Salir_cliente">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--VISTA SESION CLIENTE-->
    <string name="NombreCategoriaD">--</string>


    <!--REGISTRO DE ADMINISTRADORES-->

    <string name="RegistroNuevo">Registro de Usuarios</string>
    <string name="CorreoUser">Email:</string>
    <string name="PasswordUser">Contraseña:</string>
    <string name="Nombre1">Nombre:</string>
    <string name="Nombre_user">Nombre usuario:</string>
    <string name="Apellido1">Apellido:</string>
    <string name="Direccion">Direccion:</string>
    <string name="Telefono">Telefono:</string>
    <string name="Identificacion">Identificacion:</string>
    <string name="Id_Pertil">Id_Pertil:</string>
    <string name="Id_User">Id:</string>
    <string name="GuardarUser">Guardar</string>
    <string name="Roll">Admin/User</string>
    <string name="RegistrarUser">Registrar</string>


    <!--PERFIL ADMINISTRADOR-->

    <string name="InformacionAdministradorTxt">Mi información</string>
    <string name="UidAdministradorTxt">Mi ID</string>
    <string name="UidAdministrador">--</string>
    <string name="NombreAdministradorTxt">Nombre:</string>
    <string name="NombreAdministrador">--</string>
    <string name="ApellidoAdministradorTxt">Apellido:</string>
    <string name="ApellidoAdministrador">--</string>
    <string name="EmailAdministradorTxt">Email:</string>
    <string name="EmailAdministrador">--</string>
    <string name="PassdordAdministradorTxt">Password:</string>
    <string name="PassdordAdministrador">--</string>
    <string name="PasswordActualizarAdministrador">Actualizar password</string>
    <string name="DatosActualizarAdministrador">Actualizar datos</string>


</resources>