<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ImagenAdministrador"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/perfil_1" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:layout_marginTop="18dp"
                            android:text="Bienvenido!"
                            android:textColor="@color/color7"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp">

                        <TextView
                            android:id="@+id/NombreAdministrador2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:layout_marginTop="18dp"
                            android:text="@string/NombreAdministrador"
                            android:textColor="@color/color7"
                            android:textSize="20sp" />
                        <TextView
                            android:id="@+id/ApellidoAdministrador2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:layout_marginTop="18dp"
                            android:text="@string/NombreAdministrador"
                            android:textColor="@color/color7"
                            android:layout_marginLeft="2dp"
                            android:textSize="20sp" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            android:background="@color/color2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_1"
            android:orientation="vertical"
            android:padding="18dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/UidAdministradorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/UidAdministradorTxt"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/UidAdministrador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:text="@string/UidAdministrador"
                    android:textSize="17sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/color8" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/NombreAdministradorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NombreAdministradorTxt"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/NombreAdministrador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:text="@string/NombreAdministrador"
                    android:textSize="17sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ApellidoAdministradorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ApellidoAdministradorTxt"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ApellidoAdministrador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:text="@string/ApellidoAdministrador"
                    android:textSize="17sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/EmailAdministradorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/EmailAdministradorTxt"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/EmailAdministrador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:text="@string/EmailAdministrador"
                    android:textSize="17sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PassdordAdministradorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PassdordAdministradorTxt"
                    android:layout_weight="0.5"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/PassdordAdministrador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:text="@string/PassdordAdministrador"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/PasswordActualizarAdministrador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:shadowColor="@color/color10"
                android:background="@color/primary5"
                android:textColor="@color/color11"
                android:padding="15dp"
                android:text="@string/PasswordActualizarAdministrador" />

            <Button
                android:id="@+id/DatosActualizarAdministrador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/color11"
                android:shadowColor="@color/color2"
                android:background="@color/color5"
                android:padding="15dp"
                android:text="@string/DatosActualizarAdministrador" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>