<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:background="@drawable/background_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="13dp"
                            android:src="@drawable/usuario"
                            tools:ignore="ImageContrastCheck" />


                    </LinearLayout>


                </FrameLayout>


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_1"
            android:layout_marginTop="-100dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:text="@string/RegistroTXT"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="28sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@color/color7" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_margin="5dp"
                app:startIconDrawable="@drawable/email_v">

                <EditText
                    android:id="@+id/NombreUser"
                    android:hint="@string/NombreUser"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_margin="5dp"
                app:startIconDrawable="@drawable/email_v">

                <EditText
                    android:id="@+id/ApellidoUser"
                    android:hint="@string/ApellidoUser"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_margin="5dp"
                app:startIconDrawable="@drawable/email_v">

                <EditText
                    android:id="@+id/EmailUser"
                    android:hint="@string/EmailUser"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_margin="5dp"
                app:startIconDrawable="@drawable/lock_v">

                <EditText
                    android:id="@+id/PassUser"
                    android:hint="@string/PassUser"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_margin="5dp"
                app:startIconDrawable="@drawable/lock_v">

                <EditText
                    android:id="@+id/PassRUser"
                    android:hint="@string/PassRUser"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/BtnCrearUser"
                android:text="@string/BtnCrearUser"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textStyle="normal"
                android:textColor="@color/color11"
                android:background="@color/color5"
                android:layout_width="160dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>