<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:background="@drawable/background_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/usuario"
                            tools:ignore="ImageContrastCheck" />


                    </LinearLayout>


                </FrameLayout>


            </LinearLayout>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_1"
            android:layout_marginTop="-100dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:text="@string/LoginTXT"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="28sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@color/color7" />

            <TextView
                android:text="Inicia sesión para continuar."
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_margin="10dp"
                app:startIconDrawable="@drawable/perfil_v">

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_margin="10dp"
                app:startIconDrawable="@drawable/lock_v">

                <EditText
                    android:id="@+id/Password"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:paddingTop="30dp"
                android:layout_gravity="center">

            <Button
                android:id="@+id/Acceder"
                android:text="@string/Acceder"
                android:layout_gravity="left"
                android:textColor="@color/color11"
                android:textSize="16dp"
                android:textStyle="normal"
                android:padding="5dp"
                android:shadowRadius="@integer/material_motion_duration_medium_1"
                android:shadowColor="@color/color1"
                android:background="@color/primary1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/Registrate"
                android:text="@string/Registrar"
                android:layout_gravity="right"
                android:textStyle="normal"
                android:textColor="@color/color11"
                android:shadowColor="@color/color1"
                android:background="@color/color5"
                android:layout_width="150dp"
                android:layout_marginLeft="50dp"
                android:textSize="16dp"
                android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/BtnResetPass"
                android:text="@string/BtnResetPass"
                android:layout_marginBottom="80dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>